--- a/package.json
+++ b/package.json
@@ -35,5 +35,13 @@
   },
   "engines": {
     "node": ">=18"
+  },
+  "codegenConfig": {
+    "name": "JSIWorkshops",
+    "type": "modules",
+    "jsSrcsDir": "specs",
+    "android": {
+      "javaPackageName": "com.jsiworkshops"
+    }
   }
 }
